--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 # Ignore spring binstubs
-/bin/
+/bin/spring
 
 # Ignore the database.yml file
 /config/database.yml
